# slice-rust

./: Cargo.toml
slice-build/: Cargo.toml
slice-codegen/: Cargo.toml
slice-derive/: Cargo.toml
slice-encoding/: Cargo.toml
slice-encoding/src/: decoder.rs  decoding.rs  encoder.rs  lib.rs  try_decode.rs  try_encode.rs
slice-encoding/src/io_types/: mod.rs
slice-encoding/src/slice1/: mod.rs
slice-encoding/src/slice2/: decoding.rs  mod.rs
src/: bit_sequence.rs  slice_decodable.rs
